--- a/www/index.html
+++ b/www/index.html
@@ -20,8 +20,11 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/routes.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="portfolio">
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
