--- a/www/index.html
+++ b/www/index.html
@@ -25,13 +25,13 @@
     <script src="js/routes.js"></script>
   </head>
   <body ng-app="portfolio">
+    <!--nav bar -->
+    <ion-nav-bar class="bar-stable">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">BC Portfolio</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+    <!--  view -->
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
