--- a/www/index.html
+++ b/www/index.html
@@ -19,10 +19,23 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
+    <script src="https://cdn.firebase.com/js/simple-login/1.6.2/firebase-simple-login.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/0.7.1/angularfire.js"></script>
+
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
     <script src="js/routes.js"></script>
+    <script src="js/constants.js"></script>
+    <!-- controllers -->
+    <script src="js/controllers/auth.js"></script>
+    <script src="js/controllers/portfolio.js"></script>
+    <script src="js/controllers/quote.js"></script>
+    <script src="js/controllers/start.js"></script>
+    <script src="js/controllers/account.js"></script>
+    <!-- services -->
+    <script src="js/services/auth.js"></script>
+    <script src="js/services/profile.js"></script>
   </head>
   <body ng-app="portfolio">
     <!--  view -->
