--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
     <script src="https://cdn.firebase.com/js/simple-login/1.6.2/firebase-simple-login.js"></script>
-    <script src="https://cdn.firebase.com/libs/angularfire/0.7.1/angularfire.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
@@ -36,6 +36,8 @@
     <!-- services -->
     <script src="js/services/auth.js"></script>
     <script src="js/services/profile.js"></script>
+    <script src="js/services/portfolio.js"></script>
+    <script src="js/services/investment.js"></script>
   </head>
   <body ng-app="portfolio">
     <!--  view -->
