basic investment view

--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/controllers/quote.js"></script>
     <script src="js/controllers/start.js"></script>
     <script src="js/controllers/account.js"></script>
+    <script src="js/controllers/portfolio-detail.js"></script>
     <!-- services -->
     <script src="js/services/auth.js"></script>
     <script src="js/services/profile.js"></script>
